core/pkg/opaprocessor/testdata/regocelparity/rules/ingress-in-default-namespace/test/ingress/input/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubescape
  namespace: default
spec:
  rules:
  - host: my-app.my-domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-service
            port:
              number: 80
